welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: reassignment to val
      y=true
       ^Program:10: error: reassignment to val
      y=true
       ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estSurBiscuit()) {
  ^