welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  def y=false
  for(x<-0 to 5) {
    if (estSurBiscuit()) {
      y=true
    }
    avance()
  }
  if (estSurBiscuit()) {
      y=true
  }
}